# Smart-Snake

./: .gitignore  CMakeLists.txt  alert.cc  alert.h  algorithm.cc  algorithm.h  application.cc  application.h  build.bat  caption.cc  caption.h  caption_init.h  console.cc  console.h  draw.cc  draw.h  experiment.cc  experiment.h  file_handler.cc  file_handler.h  game.cc  game.h  interface.cc  interface.h  main.cc  mouse_input.cc  mouse_input.h  playground.cc  playground.h  scrollable_list.cc  scrollable_list.h  table.h  toANSI.bat  utils.cc  utils.h  validation.cc  validation.h
src/: alert.cc  algorithm.cc  algorithm.h  application.cc  application.h  caption.cc  caption_init.h  experiment.cc  experiment.h  file_handler.cc  file_handler.h  game.cc  interface.cc  mouse_input.cc  mouse_input.h  playground.cc  playground.h  scrollable_list.cc  scrollable_list.h  table.cc  utils.cc  validation.h
